# simplefermi

./: .gitignore  DEVLOG.md  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py
notebooks/: earth.ipynb  testing.md
simplefermi/: __init__.py  __main__.py  api.py  core.py  dimensions.py  distributions.py  dotplots.py  library.py  notebook.py  parser.py  quantities.py  utils.py
simplefermi/archive/: dimensions.py  quantities.py
simplefermi/static/: style.css
simplefermi/templates/: index.html
simplefermi/tree_sitter_fermi/: __init__.py  binding.c
tests/: dimensions_test.py
