[project]
name = "simplefermi"
version = "0.1.0"
description = "Simple uncertainty calculations."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipython>=8.27.0",
    "matplotlib>=3.9.2",
    "pillow>=11.0.0",
    "pint>=0.24.4",
    "scipy>=1.14.1",
    "termcolor>=2.5.0",
]
