[project]
name = "simplefermi"
version = "0.1.1"
description = "Simple uncertainty calculations."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Alex Alemi", email = "alexalemi@gmail.com" }
]
dependencies = [
    "absl-py>=2.1.0",
    "ipython>=8.27.0",
    "matplotlib>=3.9.2",
    "pillow>=11.0.0",
    "pint>=0.22",
    "pytest>=8.3.4",
    "scipy>=1.14.1",
    "termcolor>=2.5.0",
]
[tool.setuptools]
py-modules = ['simplefermi']
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "twine>=6.2.0",
]
